tests/ui/macros/metavar-span-collision-recursive.stderr
error[E0308]: mismatched types
  --> $DIR/auxiliary/recursive-macro.rs:4:25
   |
LL | macro_rules! recursive_macro {
   | ----------------------------
   | |
   | in this expansion of `recursive_macro::recursive_macro!` (#1)
   | in this expansion of `$crate::recursive_macro!` (#2)
LL |     (outer $tt:tt) => { $crate::recursive_macro!(inner $tt) };
   |                         ----------------------------------- in this macro invocation (#2)
LL |     (inner $tt:tt) => { $tt + 2 };
   |                         ^^^^^^^ expected `()`, found integer
   |
  ::: $DIR/metavar-span-collision-recursive.rs:5:12
   |
LL |     let _: () = recursive_macro::recursive_macro!(outer 1);
   |            --   ------------------------------------------ in this macro invocation (#1)
   |            |
   |            expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
